libs/@local/hql/syntax-jexpr/src/parser/snapshots/hql_frontend_jexpr__parser__expr__test__object_is_constant_with_type.snap
---
source: libs/@local/hql/frontend-jexpr/src/parser/expr.rs
expression: "{\"type\": \"u32\", \"const\": 42}"
---
Expr {
    kind: Constant(
        Constant {
            value: Value {
                kind: Number(
                    "42",
                ),
                span: SpanId(
                    4,
                ),
            },
            type: Some(
                Type {
                    kind: Path(
                        Path {
                            segments: [
                                Symbol {
                                    value: "u32",
                                    span: SpanId(
                                        1,
                                    ),
                                },
                            ],
                            span: SpanId(
                                2,
                            ),
                        },
                    ),
                    span: SpanId(
                        3,
                    ),
                },
            ),
        },
    ),
    span: SpanId(
        5,
    ),
}
